# chronos

./: GIT_WEBHOOK_IMPLEMENTATION.md  NOTES_SYSTEM.md  NOTIFICATIONS_GUIDE.md  PROCESS_MONITOR.md  PROJECT_ANALYSIS.md  chronos-aligned.apk.idsig
chronos_backend/: Cargo.toml
chronos_backend/src/: db.rs  lib.rs
chronos_backend/src/commands/: ai.rs  mod.rs  notes.rs  tasks.rs  timer.rs
chronos_backend/src/entities/: task.rs
chronos_backend/src/services/: ai_service.rs  mod.rs  note_service.rs  process_monitor.rs  task_service.rs  timer_service.rs
scripts/: QUICK_START.md  WEBHOOK_SETUP.md  post-commit.sample
src/: index.html  main.js
src-tauri/: Cargo.toml  chronos.db-shm  chronos.db-wal  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  webhook_server.rs
