[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

[lib]
name = "chronos_lib"
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
sysinfo = "0.33"
